--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" ></script>
     <script src="./js/jquery.mask.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/messages_pt_BR.min.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
